tests/reference/asr-intrinsics16-764bb38.stderr
semantic error: Argument to intrinsic `Sum` is expected to be an array, found: integer
 --> tests/errors/intrinsics16.f90:7:20
  |
7 |     integer :: arr(sum(kind(x)))
  |                    ^^^^^^^^^^^^ 
